@@ -5,6 +5,7 @@ Overview of changes in lightdm 1.0.1
     * Start authentication for automtically selected user in GTK greeter
     * Link liblightdm-qt against QtGui
     * Fix liblightdm-qt crashing when face images are installed
+    * Set correct permissions on session log files
 
 Overview of changes in lightdm 1.0.0
 
